# Bird-Classifier

./: .dockerignore  .env copy  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  classifier.py  constants.py  docker-compose.yml  model.py  pyproject.toml  requirements.txt  test_classifier.py  utils.py  webapp.py
alembic/: env.py
alembic/versions/: deb339ea450b_inital_db_migration.py
webapp/: model.py  settings.py  test_webapp.py  utils.py  webapp.py
webapp/alembic/: env.py
webapp/alembic/versions/: deb339ea450b_inital_db_migration.py
