[tool.poetry]
name = "python_test_task"
version = "0.1.0"
description = ""
authors = ["Tony Benoy <me@tonybenoy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
attrs = "20.3.0"
numpy = "1.19.3"
opencv-python = "4.5.1.48"
tensorflow-hub = "0.11.0"
tensorflow = "2.7"

[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
black = "^22.8.0"
flake8 = "^5.0.4"
pylint = "^2.15.3"
isort = "pre-commit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
